add readme and add unit test
